k8s/myapp-deploy-v1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deploy
  labels:
    app: myapp-deploy
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  minReadySeconds: 20
  replicas: 5
  selector:
    matchLabels:
      app: myapp-deploy
  template:
    metadata:
      labels:
        app: myapp-deploy
    spec:
      containers:
        - image: c1t1d0s7/myweb:v1
          name: myapp
          ports:
          - containerPort: 8080
