k8s/myapp-pod-arg.yml
---
apiVersion: v1
kind: Pod
metadata: 
  name: myapp-pod-arg
  labels:
    app: web
spec:
  containers:
  - image: c1t1d0s7/myweb
    name: myapp
    args: 
    - "Customized Hello World!"
    ports:
    - containerPort: 8080
      protocol: TCP
