k8s/myapp-pod-cm-compress.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-cm-compress
spec:
  containers:
  - image: nginx
    name: myapp-compress
    volumeMounts:
    - name: nginx-compress-config
      mountPath: /etc/nginx/conf.d
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:
  - name: nginx-compress-config
    configMap:
      name: nginx-gzip-config
