k8s/myapp-pod-cm.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-cm
spec:
  containers:
  - image: c1t1d0s7/myweb:customport
    name: myapp
    args:
    - $(MESSAGE)
    ports:
    - containerPort: 8088
      protocol: TCP
