k8s/myapp-pod-env.yml
---
apiVersion: v1
kind: Pod
metadata: 
  name: myapp-pod-env
spec:
  containers:
  - image: csoul/ku_web:customport
    name: myapp
    ports:
    - containerPort: 8088
      protocol: TCP
