k8s/mynapp-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: mynapp-pod
spec:
  containers:
  - image: c1t1d0s7/myweb
    name: mynapp
    ports:
    - containerPort: 8080
      protocol: TCP
