k8s/pod1.yml
apiVersion: v1
kind: Pod
metadata: 
  name: pod1
  labels:
    app: web
spec:
  containers:
  - image: c1t1d0s7/myweb
    name: pod1
    ports:
    - containerPort: 8080
      protocol: TCP
