k8s/pod2.yml
apiVersion: v1
kind: Pod
metadata: 
  name: pod2
  labels:
    app: apache
spec:
  containers:
  - image: c1t1d0s7/myweb
    name: pod2
    ports:
    - containerPort: 8080
      protocol: TCP
