k8s/myapp-svc-deploy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-deploy
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: myapp-deploy
