k8s/myapp-svc-headless.yml
#myapp-svc-headless.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-headless
spec:
  clusterIP: None
  ports: 
  - port: 80
    targetPort: 8080
  selector:
    app: headless
