k8s/svc-emptyDir.yml
apiVersion: v1
kind: Service
metadata: 
  name: myapp-svc-fortune
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: myapp-rs-fortune
