k8s/svc-ext-lb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lb
spec:
  type: LoadBalancer
  selector:
    lb: rs
  ports:
    - name: webport
      port: 80
      targetPort: 8080
