k8s/svc-ext-np.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ext-np
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - name: webport
      port: 80
      targetPort: myweb-port
      nodePort: 31111
