k8s/svc-nfs.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-nfs
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector: 
    app: myapp-rs-nfs
