k8s/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip
  labels:
    app: svc
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: webport
      port: 80
      protocol: TCP
      targetPort: 8080
