k8s/ing-mul-path.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ing-mpath
spec:
  rules:
  - host: mynapp.example.com
    http:
      paths:
        - path: /web1
          backend: 
            serviceName: clusterip
            servicePort: 81
        - path: /web2
          backend:
            serviceName: ext-np
            servicePort: webport
